--- a/estilos/style.css
+++ b/estilos/style.css
@@ -55,6 +55,10 @@ body{
     display:none;
 }
 
+.fa-solid, .fas {
+    color: white;
+}
+
 
 @media screen and (max-width: 872px) {
     .nav-links{
@@ -62,6 +66,7 @@ body{
     }
     .menu{
         display: inherit;
+        color:white;
     }
     .menu button{
         background-color: transparent; 
@@ -72,7 +77,7 @@ body{
         padding-left: inherit;
     }
     .header .logo img{
-        height: 50px;
+        height: 90px;
         width: auto;
     }
    
