--- a/componentes/catalogo.css
+++ b/componentes/catalogo.css
@@ -17,14 +17,14 @@ img{
 .producto{
     background: radial-gradient(circle, rgba(77,0,149,1) 0%, rgba(33,28,114,1) 100%);
     border: 4px solid white;
-    padding-block: 1.25rem;
+    padding-block: 1.10rem;
     text-align: center;
     display: grid;
-    row-gap: 1.2rem;
+    row-gap: 1.1rem;
     cursor: pointer;
 }
 .card-img{
-    width: 200px;
+    width: 160px;
     justify-self: center;
     filter: drop-shadow(0 8px 16px hsla(5,90%,4%,.2));
     transition:transform .3s;
@@ -62,7 +62,8 @@ img{
 .modal-card{
     position: relative;
     background:radial-gradient(circle, rgba(77,0,149,1) 0%, rgba(33,28,114,1) 100%); ;
-    padding: 3rem 1.25rem 2rem;
+    /*padding: 3rem 1.25rem 2rem;*/
+    padding: 1rem 1.25rem 2rem;
     display: grid;
     row-gap: 1.5rem;
     text-align: center;
@@ -89,7 +90,9 @@ img{
 }
 .modal-info{
     margin-bottom: 1rem;
-}
+    color: rgb(194, 193, 193);
+    font-size: 15px;
+}  
 .modal-precio{
     font-size: 15px;
     color: white;
@@ -108,7 +111,7 @@ img{
     }
  
     .modal{
-       padding-inline: 1rem;
+       padding-inline: 1.4rem;
     }
  }
  
@@ -117,16 +120,18 @@ img{
     .card-container{
        grid-template-columns: 330px;
     }
- 
+
     .modal-card{
-       max-width: 350px;
+       max-width: 250px;   
     }
+    
  }
  
  @media screen and (min-width: 768px){
     .card-container{
        grid-template-columns: repeat(2, 330px);
     }
+    
  }
  
  /* For large devices */
