--- a/componentes/catalogo.css
+++ b/componentes/catalogo.css
@@ -62,8 +62,7 @@ img{
 .modal-card{
     position: relative;
     background:radial-gradient(circle, rgba(77,0,149,1) 0%, rgba(33,28,114,1) 100%); ;
-    /*padding: 3rem 1.25rem 2rem;*/
-    padding: 1rem 1.25rem 2rem;
+    padding: 3rem 1.25rem 2rem;
     display: grid;
     row-gap: 1.5rem;
     text-align: center;
@@ -78,8 +77,8 @@ img{
     color:white;
     cursor: pointer;
 }
-.modal-img{
-    width: 100px;
+.img-modal{
+    width: 200px;
     justify-self: center;
     filter: drop-shadow(0 8px 16px hsla(5,90%,4%,.2));
 }
@@ -122,7 +121,7 @@ img{
     }
 
     .modal-card{
-       max-width: 250px;   
+       max-width: 350px;   
     }
     
  }
@@ -131,41 +130,13 @@ img{
     .card-container{
        grid-template-columns: repeat(2, 330px);
     }
-    
+   
  }
  
- /* For large devices */
- @media screen and (min-width: 1150px){
-
-    .card{
-       &__container{
-          grid-template-columns: repeat(3, 330px);
-          gap: 3rem;
-       }
-       &__product{
-          padding-block: 2rem;
-          border-width: 6px;
-       }
-       &__name,
-       &__price{
-          font-size: var(--h3-font-size);
-       }
-    }
  
-    .modal{
-       &__card{
-          max-width: 376px;
-          padding: 3rem 2.5rem 2.5rem;
-       }
-       &__img{
-          width: 250px;
-       }
-       &__name,
-       &__price{
-          font-size: var(--h3-font-size);
-       }
-       &__buttons{
-          column-gap: 1rem;
-       }
-    }
+ @media screen and (min-height: 500px) {
+   .modal-card{
+      
+      padding: 1rem 1.25rem 2rem;
+   }
  }
