--- a/componentes/catalogo.css
+++ b/componentes/catalogo.css
@@ -2,21 +2,23 @@ img{
     display: block;
   max-width: 100%;
   height: auto;
-
+   border-radius: 5px;
 }
 .productos{
     margin-inline:1.5em;
-    padding-block: 5rem;
+    padding-block: 4rem;
+    
 }
 .card-container{
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
-    gap:2rem;
+    gap:1rem;
 }
 .producto{
     background: radial-gradient(circle, rgba(77,0,149,1) 0%, rgba(33,28,114,1) 100%);
     border: 4px solid white;
+    border-radius: 30px;
     padding-block: 1.10rem;
     text-align: center;
     display: grid;
@@ -49,6 +51,7 @@ img{
     inset: 0;
     background-color: hsla(5,90%,4%,.2);
     backdrop-filter: blur(16px);
+    
     -webkit-background-filter:blur(16px);
     display: grid;
     place-items: center;
@@ -62,6 +65,7 @@ img{
 .modal-card{
     position: relative;
     background:radial-gradient(circle, rgba(77,0,149,1) 0%, rgba(33,28,114,1) 100%); ;
+    border-radius: 30px;
     padding: 3rem 1.25rem 2rem;
     display: grid;
     row-gap: 1.5rem;
@@ -78,7 +82,7 @@ img{
     cursor: pointer;
 }
 .img-modal{
-    width: 200px;
+    width: 220px;
     justify-self: center;
     filter: drop-shadow(0 8px 16px hsla(5,90%,4%,.2));
 }
